website/versioned_docs/version-0.93.6/ais_iot_index.md
---
title: Urządzenia dodatkowe
sidebar_label: Urządzenia dodatkowe
id: version-0.93.6-ais_iot_index
original_id: ais_iot_index
---

Na **Bramce IoT dostarczamy zainstalowaną największą na świecie otwartą platformę do sterowania automatyką domową**, dzięki temu **do Asystenta domowego można podłączyć ponad 1400 różnych komponentów**. Wsparcie dla tych komponentów zapewnia społeczność skupiona wokół platformy do automatyki domowej "Home Assistant". Otwartość platformy zapewnia naszemu produktowi stały rozwój i aktualizacje, pracuje na to setki programistów. Rynek Internetu Rzeczy rozwija się bardzo dynamicznie i co tydzień w systemie pojawiajają sie integracje z nowymi urządzeniami.

By umożliwić każdemu proste dodawanie nowych urządzeń tworzymy graficzne kreatory, które prowadzą przez proces konfiguracji krok po kroku, mamy też specjalną sekcję urządzeń [Rekomendowane do zastosowania w Twoim domu](/AIS-docs/docs/en/ais_iot_works_with.html).


Sprawdź jakie urządzenia w swoim domu możesz już teraz podłączyć do bramki <a href="https://www.home-assistant.io/components/" target="_blank">Komponenty Home Assistant</a>


![Aplikacja asystent domowy](/AIS-docs/img/en/iot/iot_hass.png)
