website/versioned_docs/version-0.105.7/ais_iot_index.md
---
title: Integracje
sidebar_label: Integracje dodatkowe
id: version-0.105.7-ais_iot_index
original_id: ais_iot_index
---

Na **Bramce IoT dostarczamy zainstalowaną największą na świecie otwartą platformę do sterowania automatyką domową**, dzięki temu do Asystenta domowego można podłączyć ponad **1500 różnych komponentów**.

> UWAGA! Nie wszystko jest proste do skonfigurowania; nie wszystko jeszcze działa idealne. Dlatego nasz produkt jest w wersji developerskiej/rozwojowej dedykowanej głównie dla osób technicznych/programistów.

Nie wspieramy wszystkich komponentów, bo nie mamy na to zasobów. Jeżeli jesteś programistą, to poradzisz sobie z większością, w innym przypadku możesz korzystać z naszych wbudowanych integracji i stopniowo dołączać kolejne, które będą obsługiwane za pomocą kreatorów.

![Aplikacja asystent domowy](/AIS-docs/img/en/iot/iot_hass.png)

Tak jak zaznaczono na zdjęciu powyżej: **wsparcie dla 1500 komponentów zapewnia społeczność skupiona wokół platformy do automatyki domowej "Home Assistant"**. Otwartość platformy zapewnia naszemu produktowi stały rozwój i aktualizacje, pracuje na to setki programistów. Rynek Internetu Rzeczy rozwija się bardzo dynamicznie i co tydzień w systemie pojawiają sie integracje z nowymi urządzeniami.

By umożliwić każdemu proste dodawanie nowych urządzeń tworzymy graficzne kreatory, które prowadzą przez proces konfiguracji krok po kroku, mamy też specjalną sekcję urządzeń [Rekomendowane do zastosowania w Twoim domu](/AIS-docs/docs/en/ais_iot_works_with.html).
